bynkc/tests/fixtures/positive/405_generic_method_on_nongeneric_type/input.bynk
commons wraps

-- #594: a method may carry its OWN type parameter even when its receiver type
-- is *not* generic. The receiver contributes no parameters (`self: Wrap`), so
-- only the method's `U` is inferred — from the lambda's return type.
type Wrap = { n: Int }

fn Wrap.cast[U](self, f: Int -> U) -> U {
  f(self.n)
}

fn as_label(w: Wrap) -> String {
  w.cast((x) => "wrapped")
}

fn doubled(w: Wrap) -> Int {
  w.cast((x) => x * 2)
}
